...
        android:layout_marginLeft="@dimen/cv_recipe_ingredient_margin_left"
        android:layout_marginEnd="@dimen/cv_recipe_ingredient_margin_right"
        android:layout_marginRight="@dimen/cv_recipe_ingredient_margin_right"
        android:layout_marginBottom="@dimen/cv_recipe_ingredient_margin_bottom">

        <TextView
            android:id="@+id/tv_recipe_ingredients"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimaryLight"
            android:padding="@dimen/tv_recipe_ingredients_padding"
            tools:text="@string/recipe_ingredient" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_step_description"
        android:name="com.zizohanto.bakingapp.ui.ItemListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/rv_step_description_margin_left"
        android:layout_marginLeft="@dimen/rv_step_description_margin_left"
        android:layout_marginEnd="@dimen/rv_step_description_margin_right"
...
